# nd

./: README.md
n3d_pure/: index.html
n3d_pure/back-up/: render.js
n3d_pure/script/: render.js
n3d_rust/: Cargo.toml
n3d_rust/src/: camera_math.rs  config_pipeline.rs  custom_structs.rs  fragment_shader.wgsl  gg.txt  lib.rs  model_exec.rs  model_exec2.rs  pbr_fragment_shader.wgsl  render_loop.rs  saved_state.rs  vertex_shader.wgsl
