[package]
name = "renderer"
version = "0.1.0"           
edition = "2021"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2"# for running function to web
wasm-bindgen-futures = "0.4.50"
wgpu = {version = "26.0.1",features=["webgpu"]}
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement","Response","Request","console","ResizeObserver","Gpu"] }
console_error_panic_hook = "0.1"
gltf = "1.4.1"
gltf-json = "1.4.1"
winit = { version = "0.30", features = ["rwh_05"] }
bytemuck = "1.13"
glam = "0.30.5"